--- a/src/app/layout/components/menu/vertical-menu/vertical-menu.component.html
+++ b/src/app/layout/components/menu/vertical-menu/vertical-menu.component.html
@@ -14,7 +14,7 @@
     <li class="nav-item nav-toggle">
       <a class="nav-link modern-nav-toggle d-none d-xl-block pr-0" (click)="toggleSidebarCollapsible()">
         <i
-          [ngClass]="isCollapsed === true ? 'icon-circle' : 'icon-disc'"
+          [data-feather]="isCollapsed === true ? 'circle' : 'disc'"
           class="toggle-icon feather font-medium-4 collapse-toggle-icon text-primary"
         ></i>
       </a>
