refactoring home statistics section

--- a/src/app/modules/home/statistics-section/statistics-section.component.html
+++ b/src/app/modules/home/statistics-section/statistics-section.component.html
@@ -1,10 +1,8 @@
-<div class="footer">
-  <!--
-    <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="-300 -60 950 270">
-      <path d="M-314,267 C105,364 400,100 812,279" fill="none" stroke-width="120"
-        stroke-linecap="round" />
-    </svg>
-  -->
+<div class="statistics-section">
+  <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="-300 -60 950 270">
+    <path d="M-314,267 C105,364 400,100 812,279" fill="none" stroke-width="120"
+      stroke-linecap="round" />
+  </svg>
 
   <div class="statistics d-flex justify-content-between">
     <div class="count-item decoration-bottom">
