--- a/src/app/modules/home/statistics-section/statistics-section.component.scss
+++ b/src/app/modules/home/statistics-section/statistics-section.component.scss
@@ -2,7 +2,7 @@
 @import 'bootstrap/scss/functions';
 @import 'scss/base/bootstrap-extended/variables';
 
-.footer {
+.statistics-section {
   position: absolute;
   height: 200px;
   margin-left: -2rem;
