refactoring .custom-table | add .beautiful-table class to globals

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -230,3 +230,18 @@ pre {
   padding: 1px !important;
   transform: rotate(332deg);
 }
+
+.beautiful-table {
+  transition: all 0.2s ease;
+  opacity: 0.9;
+  border: none;
+  box-shadow: var(--inherit-bg-box-shadow) !important;
+  border-radius: 10px;
+
+  th,
+  td {
+    border-top: none;
+    padding-top: 1.15rem;
+    padding-bottom: 1.15rem;
+  }
+}
