--- a/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
+++ b/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
@@ -86,7 +86,7 @@
             <div class="card">
 
               <div class="">
-                <div class="table-responsive custom-table contest-problems">
+                <div class="table-responsive beautiful-table contest-problems">
                   <table class="table">
                     <tbody>
                     <tr [ngClass]="{
@@ -159,7 +159,7 @@
   </div>
 
   <div [@fadeInLeftOnEnter] class="card results" *ngIf="resultsVisible && contestant">
-    <div class="table-responsive custom-table">
+    <div class="table-responsive beautiful-table">
       <table class="table">
         <thead>
         <tr>
