--- a/src/app/modules/problems/pages/rating/rating.component.html
+++ b/src/app/modules/problems/pages/rating/rating.component.html
@@ -4,7 +4,7 @@
 
     <section class="mt-2">
       <div class="card">
-        <div class="custom-table table-responsive">
+        <div class="beautiful-table table-responsive">
           <table class="table table-striped">
             <thead>
             <tr class="bg-gradient-primary">
