--- a/src/app/modules/users/pages/users/users.component.html
+++ b/src/app/modules/users/pages/users/users.component.html
@@ -75,7 +75,7 @@
                 <empty-result imgHeight="150px"></empty-result>
               </div>
             } @else {
-              <div class="custom-table table-responsive">
+              <div class="beautiful-table table-responsive">
                 <table class="table table-striped">
                   <thead>
                   <tr class="bg-gradient-primary">
