--- a/src/app/modules/contests/pages/contest/contest.component.html
+++ b/src/app/modules/contests/pages/contest/contest.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="col-12 mt-2 px-lg-2">  
-    <contest-card-big [contest]="contest"></contest-card-big>
+    <contest-card [contest]="contest"></contest-card>
   </div>
 </div>
 
