--- a/src/app/modules/contests/pages/contests/contests.component.html
+++ b/src/app/modules/contests/pages/contests/contests.component.html
@@ -70,7 +70,7 @@
 
       <div class="row">
         <div class="col-12" *ngFor="let contest of contests">
-          <contest-card-big [contest]="contest"></contest-card-big>
+          <contest-card [contest]="contest"></contest-card>
         </div>
       </div>
 
