--- a/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.html
+++ b/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.html
@@ -1,71 +1,78 @@
-<div class="card text-center" [ngClass]="{'bg-contest': coreConfig.layout.skin != 'dark'}">
-  <a [routerLink]="routerLink" class="card-header">
-    <div class="avatar bg-primary p-50 m-0 mb-1">
-      <div class="avatar-content">
-        <i data-feather="flag" class="font-medium-5"></i>
-      </div>
-    </div>
-    <br>
-    <h4 class="text-white">
-      {{ contest.title }}
-    </h4>
-  </a>
-
-  <a [routerLink]="routerLink" class="card-body mt-1">
-    <div *ngIf="contest.status == 0">
-      <h4 class="text-center text-white mb-4">
-        {{ 'CONTESTS.CONTEST_ENDS' | translate }}
-      </h4>
-      <div class="ml-1 mr-1">
-        <contest-countdown [clockColor]="textColor" [contest]="contest"></contest-countdown>
-      </div>
+<div
+  [@fadeInOnEnter]
+  class="card contests-colors contest-{{ contest.id }} {{ contest.title }} contest-type-{{ contest.type }}">
+  <a [routerLink]="routerLink">
+    <div *ngIf="contest.logo" class="card-bg" style="background-image: url('{{ contest.logo }}');">
     </div>
 
-    <div *ngIf="contest.status == -1">
-      <h4 class="text-center text-white mb-4">
-        {{ 'CONTESTS.CONTEST_STARTS' | translate }}
-      </h4>
-      <div class="ml-1 mr-1">
-        <contest-countdown [clockColor]="textColor" [contest]="contest"></contest-countdown>
+    <div class="card-header d-block">
+      <div class="d-flex justify-content-between">
+        <div class="category">
+          <span class="badge badge-glow badge-primary">
+            {{ contest.categoryTitle | translate }}
+          </span>
+        </div>
+
+        <div>
+          <span class="badge badge-success badge-glow" *ngIf="contest.isRated">{{ 'Rated' | translate }}</span>
+          <span class="badge badge-danger badge-glow" *ngIf="!contest.isRated">{{ 'Unrated' | translate }}</span>
+        </div>
+      </div>
+      <div class="card-title">
+        {{ contest.title }}
       </div>
     </div>
 
-    <div *ngIf="contest.status == 1">
-      <h4 class="text-white mb-2">
-        {{ 'CONTESTS.CONTEST_FINISHED' | translate }}
-      </h4>
-
-      <div *ngIf="top3Contestants.length > 0" class="mt-2 row">
-        <div class="col contestant mt-1" [@bounce]="animationState[0]" (mouseenter)="animationState[0]=true;">
-          <img width="32" height="32" src="assets/images/icons/contest-medal-2.png">
-          <br>
-          <contestant-view [teamNameColor]="'white'" [textColor]="'white'" [user]="top3Contestants[1].user" [team]="top3Contestants[1].team"></contestant-view>
+    <div class="card-body">
+      <div class="contest-description" [innerHTML]="contest.description"></div>
+      <div class="contest-time">
+        <div *ngIf="contest.status == 0">
+          <h3 class="text-center mt-1 mb-3">
+            {{ 'CONTESTS.CONTEST_ENDS' | translate }}
+          </h3>
+          <span class="badge already badge-warning badge-glow">
+            {{ 'Now' | translate }}
+          </span>
+          <contest-countdown [clockColor]="'#fff'" [contest]="contest"></contest-countdown>
         </div>
 
-        <div class="col contestant" [@bounce]="animationState[1]" (mouseenter)="animationState[1]=true;">
-          <img width="32" height="32" src="assets/images/icons/contest-medal-1.png">
-          <br>
-          <contestant-view [teamNameColor]="'white'" [textColor]="'white'" [user]="top3Contestants[0].user" [team]="top3Contestants[0].team"></contestant-view>
+        <div *ngIf="contest.status == -1">
+          <h3 class="text-center mt-1 mb-3">
+            {{ 'CONTESTS.CONTEST_STARTS' | translate }}
+          </h3>
+          <contest-countdown [clockColor]="'#fff'" [contest]="contest"></contest-countdown>
         </div>
 
-        <div class="col contestant mt-2" [@bounce]="animationState[2]" (mouseenter)="animationState[2]=true;">
-          <img width="32" height="32" src="assets/images/icons/contest-medal-3.png">
-          <br>
-          <contestant-view [teamNameColor]="'white'" [textColor]="'white'" [user]="top3Contestants[2].user" [team]="top3Contestants[2].team"></contestant-view>
+        <div class="text-center" *ngIf="contest.status == 1">
+          <h3 class="mb-3 mt-1" ngbTooltip="{{ contest.finishTime | localizedDate:'medium' }}">
+            {{ 'CONTESTS.CONTEST_FINISHED' | translate }}
+          </h3>
+          @defer (on viewport) {
+            <top3-contestants [contest]="contest"></top3-contestants>
+          } @placeholder (minimum 500ms){
+            <div [style.height.px]="100">
+              <div class="mt-2">
+                <spinner color="#fff"></spinner>
+              </div>
+            </div>
+          }
         </div>
-
       </div>
     </div>
   </a>
 
   <div class="card-footer justify-content-between d-flex">
-    <div>
+    <div class="meta-info text-center">
       <span class="badge badge-glow badge-primary">
         <i data-feather="user"></i>
-        <span *ngIf="contest.status == -1">{{ contest.registrantsCount }}</span>
-        <span *ngIf="contest.status != -1">{{ contest.contestantsCount }}</span>
+        <span *ngIf="contest.status == -1" ngbTooltip="{{ 'Registrants' | translate }}">
+          {{ contest.registrantsCount }}
+        </span>
+        <span *ngIf="contest.status != -1" ngbTooltip="{{ 'Contestants' | translate }}">
+          {{ contest.contestantsCount }}
+        </span>
       </span>
-      <span class="badge badge-glow badge-primary">
+      <span class="badge badge-glow badge-primary" ngbTooltip="{{ 'Problems' | translate }}">
         <i [data-feather]="'problem' | iconName"></i>
         {{ contest.problemsCount }}
       </span>
@@ -73,87 +80,57 @@
         {{ contest.type }}
       </span>
     </div>
-    
-    <div>
-      <span *ngIf="contest.status != 1">
+
+    <div class="registration text-center">
+      <!--Virtual contest-->
+      <ng-container *ngIf="contest.isFinished()">
         <kepcoin-spend-swal
-          *ngIf="contest.status != 0 && contest.isRated && contest.isRegistered && !contest.doubleRatingPurchased"
+          *ngIf="!contest.userInfo.virtualContestPurchased"
           [customContent]="true"
-          [purchaseUrl]="'contests/' + contest.id + '/purchase-double-rating/'"
-          (success)="contest.doubleRatingPurchased=true;"
-          [value]="25"
-          class="mr-1"
-          ngbTooltip="{{ 'DoubleRating' | translate }}"
-        >
-          <img height="25" src="assets/images/icons/x2-delta.png">
+          [purchaseUrl]="'contests/' + contest.id + '/purchase-virtual-contest/'"
+          [value]="5"
+          (success)="virtualContestPurchaseSuccess()">
+          <button class="btn btn-primary btn-sm round">
+            <i [data-feather]="'contest' | iconName" [size]="16"></i>
+            {{ 'Virtual' | translate }}
+          </button>
         </kepcoin-spend-swal>
-        <img
-          ngbTooltip="{{ 'Purchased' | translate }}"
-          *ngIf="contest.isRegistered && contest.isRated && contest.doubleRatingPurchased"
-          height="25"
-          src="assets/images/icons/x2-delta.png"
-          class="mr-1"
-        >    
-        <kepcoin-spend-swal
-          *ngIf="contest.status != 0 && contest.isRated && contest.isRegistered && !contest.saveRatingPurchased"
-          [customContent]="true"
-          [purchaseUrl]="'contests/' + contest.id + '/purchase-save-rating/'"
-          [value]="25"
-          (success)="contest.saveRatingPurchased=true;"
-          class="mr-1"
-          ngbTooltip="{{ 'SaveRating' | translate }}"
-        >
-          <img height="25" src="assets/images/icons/save-rating.png">
-        </kepcoin-spend-swal>
-        <img
-          ngbTooltip="{{ 'Purchased' | translate }}"
-          *ngIf="contest.isRegistered && contest.isRated && contest.saveRatingPurchased"
-          height="25"
-          src="assets/images/icons/save-rating.png"
-          class="mr-1"
-        >    
+
         <button
-          ngbTooltip="{{ 'Cancel' | translate }}"
-          rippleEffect
-          class="btn btn-sm round btn-gradient-success"
-          (click)="cancelRegistration()"
-          *ngIf="contest.isRegistered"
-        >
-          <i data-feather="user" [size]="16"></i> {{ 'Registered' | translate }}
-          <i data-feather="x" class="text-danger"></i>
+          *ngIf="contest.userInfo.virtualContestPurchased"
+          (click)="virtualContestStart()"
+          class="btn btn-primary btn-sm round">
+          <i [data-feather]="'contest' | iconName" [size]="16"></i>
+          {{ 'StartVirtual' | translate }}
         </button>
-        <button
-          rippleEffect
-          class="btn btn-sm round btn-gradient-primary"
-          (click)="openRegistrationModal(registration)"
-          *ngIf="!contest.isRegistered"
-        >
+      </ng-container>
+
+      <span *ngIf="contest.status != 1 && !contest.userInfo.virtualContestPurchased">
+        <kepcoin-spend-swal
+          *ngIf="contest.status != 0 && contest.isRated && contest.userInfo.isRegistered && !contest.userInfo.unratedContestPurchased"
+          [customContent]="true"
+          [purchaseUrl]="'contests/' + contest.id + '/purchase-unrated-contest/'"
+          [value]="10"
+          class="mr-1" ngbTooltip="{{ 'Unrated' | translate }}"
+          (success)="contest.userInfo.unratedContestPurchased=true;">
+          <img height="25" src="assets/images/icons/unrated.png">
+        </kepcoin-spend-swal>
+        <img
+          *ngIf="contest.userInfo.isRegistered && contest.isRated && contest.userInfo.unratedContestPurchased"
+          ngbTooltip="{{ 'Purchased' | translate }}"
+          height="25" src="assets/images/icons/unrated.png" class="mr-1">
+
+          <button ngbTooltip="{{ 'Cancel' | translate }}" rippleEffect class="btn btn-sm round btn-gradient-success"
+                  (click)="cancelRegistration()" *ngIf="contest.userInfo.isRegistered">
+          <i data-feather="user" [size]="16"></i> {{ 'Registered' | translate }}
+            <i data-feather="x" class="text-danger"></i>
+        </button>
+        <button rippleEffect class="btn btn-sm round btn-gradient-primary" (click)="openRegistrationModal(registration)"
+                *ngIf="currentUser && !contest.userInfo.isRegistered">
           <i data-feather="user" [size]="16"></i> {{ 'CONTESTS.REGISTER' | translate }}
         </button>
       </span>
     </div>
   </div>
+
 </div>
-
-
-<ng-template #registration let-modal>
-	<div class="modal-header">
-		<h4 class="modal-title">{{ contest.title }}</h4>
-	</div>
-	<div class="modal-body">
-    <div class="form-group">
-      <ng-select
-      >
-
-      </ng-select>
-
-      <div class="form-group">
-      </div>
-    </div>  
-	</div>
-  <div class="modal-footer">
-    <button rippleEffect class="btn btn-sm round btn-gradient-primary">
-      <i data-feather="user" [size]="16"></i> {{ 'CONTESTS.REGISTER' | translate }}
-    </button>
-  </div>
-</ng-template>
