--- a/src/app/modules/contests/components/contest-card/contest-card-countdown/contest-card-countdown.component.html
+++ b/src/app/modules/contests/components/contest-card/contest-card-countdown/contest-card-countdown.component.html
@@ -16,6 +16,6 @@
   </div>
   <div class="card-footer">
     <contest-countdown [clockColor]="'#fff'" [textColor]="'#fff'" [contest]="contest"></contest-countdown>
-    <h3 class="text-center" *ngIf="contest.status == 1">{{ contest.finishTime | localizedDate:'medium' }}</h3>
+    <h3 class="text-center mb-1 mt-1" *ngIf="contest.status == 1">{{ contest.finishTime | localizedDate:'medium' }}</h3>
   </div>
 </div>
