--- a/src/app/modules/contests/components/contest-card/contest-card-countdown/contest-card-countdown.component.scss
+++ b/src/app/modules/contests/components/contest-card/contest-card-countdown/contest-card-countdown.component.scss
@@ -18,7 +18,7 @@
     top: 0;
     width: auto;
     text-align: center;
-    height: auto;
+    max-height: 100%;
 
     img {
       max-width: 100%;
