--- a/src/app/modules/landing-page/landing-page.component.scss
+++ b/src/app/modules/landing-page/landing-page.component.scss
@@ -1,10 +1,10 @@
-@import 'bootstrap/scss/mixins';
-@import 'bootstrap/scss/functions';
-@import 'bootstrap/scss/variables';
+@import 'scss/base/bootstrap-extended/variables';
+@import 'bootstrap/scss/mixins/dark-layout';
+@import 'bootstrap/scss/mixins/breakpoints';
 
 
 .landing-page {
-  background-color: rgba(38, 21, 222, 0.2) !important;
+  background: linear-gradient(to right, lighten($primary, 20), lighten($primary, 30)) !important;
 
   .bg-img {
     position: absolute;
