--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -244,4 +244,8 @@ pre {
     padding-top: 1.15rem;
     padding-bottom: 1.15rem;
   }
+
+  thead tr:hover {
+    transform: none !important;
+  }
 }
