--- a/src/app/modules/challenges/pages/challenges-profile/section-last-challenges/section-last-challenges.component.html
+++ b/src/app/modules/challenges/pages/challenges-profile/section-last-challenges/section-last-challenges.component.html
@@ -8,10 +8,10 @@
   </a>
 </div>
 
-<pagination
+<kep-pagination
   [(page)]="currentPage"
   (pageChange)="loadChallenges()"
   [collectionSize]="total"
   [maxSize]="5"
   [pageSize]="pageSize">
-</pagination>
+</kep-pagination>
