--- a/src/app/modules/challenges/pages/challenges/challenges.component.html
+++ b/src/app/modules/challenges/pages/challenges/challenges.component.html
@@ -200,13 +200,13 @@
             </div>
           </div>
 
-          <pagination
+          <kep-pagination
             [(page)]="challengesPage"
             [pageSize]="7"
             [collectionSize]="challengesTotal"
             [maxSize]="5"
             (pageChange)="updateChallenges()">
-          </pagination>
+          </kep-pagination>
         </div>
     
         <div class="col-lg-4 col-md-12 col-sm-12 mt-md-0 mt-2">
