--- a/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
+++ b/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
@@ -37,7 +37,7 @@
             <div class="card-body">
               <attempts-table [hideSourceCodeSize]="true" [attempts]="attempts" [contest]="contest"></attempts-table>
 
-              <pagination
+              <kep-pagination
                 *ngIf="attempts.length > 0"
                 [collectionSize]="totalAttemptsCount"
                 [(page)]="currentPage"
@@ -45,7 +45,7 @@
                 [maxSize]="5"
                 (pageChange)="reloadAttempts()"
               >
-              </pagination>
+              </kep-pagination>
 
             </div>
           </div>
