--- a/src/app/modules/arena/arena-tournament/arena-tournament.component.html
+++ b/src/app/modules/arena/arena-tournament/arena-tournament.component.html
@@ -157,7 +157,7 @@
 
           </div>
 
-          <pagination
+          <kep-pagination
             *ngIf="total > 0"
             [collectionSize]="total"
             [(page)]="pageNumber"
@@ -166,7 +166,7 @@
             [rotate]="true"
             [color]="'warning'"
             (pageChange)="updateArenaPlayers()">
-          </pagination>
+          </kep-pagination>
 
           <div class="col-12">
             <div class="row">
@@ -212,7 +212,7 @@
           </div>
 
           <div class="mb-2">
-            <pagination
+            <kep-pagination
               *ngIf="total > 0"
               [collectionSize]="total"
               [(page)]="pageNumber"
@@ -221,7 +221,7 @@
               [rotate]="true"
               [color]="'warning'"
               (pageChange)="updateArenaPlayers()">
-            </pagination>
+            </kep-pagination>
           </div>
 
         </div>
