--- a/src/app/modules/contests/pages/user-contests/contest/contest-attempts/contest-attempts.component.html
+++ b/src/app/modules/contests/pages/user-contests/contest/contest-attempts/contest-attempts.component.html
@@ -30,7 +30,7 @@
 
                 <attempts-table [attempts]="attempts" [contest]="contest"></attempts-table>
 
-                <pagination
+                <kep-pagination
                   *ngIf="attempts.length > 0"
                   [collectionSize]="totalAttemptsCount"
                   [(page)]="currentPage"
@@ -38,7 +38,7 @@
                   [maxSize]="5"
                   (pageChange)="reloadAttempts()"
                 >
-                </pagination>
+                </kep-pagination>
               </div>
             </div>
           </div>
