--- a/src/app/modules/problems/pages/hack-attempts/hack-attempts.component.html
+++ b/src/app/modules/problems/pages/hack-attempts/hack-attempts.component.html
@@ -19,13 +19,13 @@
 
           <hack-attempts-table [hackAttempts]="hackAttempts"></hack-attempts-table>
 
-          <pagination
+          <kep-pagination
             [collectionSize]="totalAttemptsCount"
             [(page)]="currentPage"
             [pageSize]="20"
             [maxSize]="7"
             (pageChange)="_reloader.next(null)"
-          ></pagination>
+          ></kep-pagination>
         </div>
       </div>
     </section>
