--- a/src/app/modules/problems/pages/rating/rating.component.html
+++ b/src/app/modules/problems/pages/rating/rating.component.html
@@ -71,14 +71,14 @@
         </div>
       </div>
 
-      <pagination
+      <kep-pagination
         (pageChange)="reloadPage()"
         *ngIf="problemsRatingList.length > 0"
         [(page)]="currentPage"
         [collectionSize]="total"
         [maxSize]="5"
         [pageSize]="10">
-      </pagination>
+      </kep-pagination>
 
       <div class="row mt-1">
         <div class="col-lg-4 col-12">
