--- a/src/app/shared/components/pagination/kep-pagination.component.html
+++ b/src/app/shared/components/pagination/kep-pagination.component.html
@@ -12,34 +12,34 @@
     <ng-template ngbPaginationFirst>
     <span
       [data-feather]="'chevrons-left'"
-      [size]="18"
+      [size]="'18px'"
       [class]="'font-weight-bolder'">
     </span>
     </ng-template>
     <ng-template ngbPaginationPrevious>
     <span
       [data-feather]="'chevron-left'"
-      [size]="18"
+      [size]="'18px'"
       [class]="'font-weight-bolder'">
     </span>
     </ng-template>
     <ng-template ngbPaginationNext>
     <span
       [data-feather]="'chevron-right'"
-      [size]="18"
+      [size]="'18px'"
       [class]="'font-weight-bolder'">
     </span>
     </ng-template>
     <ng-template ngbPaginationLast>
     <span
       [data-feather]="'chevrons-right'"
-      [size]="18"
+      [size]="'18px'"
       [class]="'font-weight-bolder'">
     </span>
     </ng-template>
   </ngb-pagination>
 
-  <div *ngIf="pageOptions?.length > 0" class="position-absolute d-none d-md-block" style="right: 0; top: 0;">
+  <div *ngIf="pageOptions?.length > 0" class="position-absolute position-right-0 position-top-0 d-none d-md-block">
     <ng-select
       [clearable]="false"
       [(ngModel)]="pageSize"
