[REFACTORING] All arena components

--- a/src/app/shared/components/kep-pagination/kep-pagination.component.html
+++ b/src/app/shared/components/kep-pagination/kep-pagination.component.html
@@ -1,7 +1,7 @@
 <div class="justify-content-center position-relative">
   <ngb-pagination
     [collectionSize]="collectionSize"
-    [(page)]="page"
+    [page]="page"
     [pageSize]="pageSize"
     [maxSize]="maxSize"
     [ellipses]="ellipses"
