--- a/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.html
+++ b/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.html
@@ -4,7 +4,7 @@
 
     <section>
       <div class="row">
-        <div class="col-lg-3 col-md-12 col-sm-12" [@fadeInLeft]="startAnimationState">
+        <div class="col-lg-3 col-md-12 col-sm-12" [@fadeInLeftOnEnter]>
           <div class="card bg-arena">
             <div class="card-header text-center">
               <div class="card-title">
@@ -27,7 +27,7 @@
                   {{ arena.questionsCount }}
                 </span>
               </div>
-          
+
             </div>
 
             <div class="card-footer text-center" *ngIf="currentUser && arena.status != 1">
@@ -61,21 +61,21 @@
             </div>
           </div>
         </div>
-        
-        <div class="col-lg-6 col-12 order-lg-2 order-3" [@fadeIn]="startAnimationState">
+
+        <div class="col-lg-6 col-12 order-lg-2 order-3" [@fadeInOnEnter]>
           <div class="card bg-arena" *ngIf="arena.status == 1 && top3.length > 0">
             <div class="card-body">
               <div class="row text-center">
-                <div class="col-4 mt-2" [@bounce2]="startAnimationState">
-                  <img width="90" height="90" class="mb-2" src="assets/images/icons/arena-second-place.png" alt="first-place">
+                <div class="col-4 mt-2" [@bounce2]>
+                  <img width="90" height="90" class="mb-2" src="../../../../../assets/images/icons/arena-second-place.png" alt="first-place">
                   <arena-player-statistics [statistics]="top3[1]" [withOpponents]="false"></arena-player-statistics>
                 </div>
-                <div class="col-4" [@bounce1]="startAnimationState">
-                  <img width="90" height="90" class="mb-2" src="assets/images/icons/arena-first-place.png" alt="first-place">
+                <div class="col-4" [@bounce1]>
+                  <img width="90" height="90" class="mb-2" src="../../../../../assets/images/icons/arena-first-place.png" alt="first-place">
                   <arena-player-statistics [statistics]="top3[0]" [withOpponents]="false"></arena-player-statistics>
                 </div>
-                <div class="col-4 mt-4" [@bounce3]="startAnimationState">
-                  <img width="90" height="90" class="mb-2" src="assets/images/icons/arena-third-place.png" alt="first-place">
+                <div class="col-4 mt-4" [@bounce3]>
+                  <img width="90" height="90" class="mb-2" src="../../../../../assets/images/icons/arena-third-place.png" alt="first-place">
                   <arena-player-statistics [statistics]="top3[2]" [withOpponents]="false"></arena-player-statistics>
                 </div>
               </div>
@@ -90,7 +90,7 @@
                 <h4 class="alert-heading animate">
                   {{ 'ArenaDrawOver' | translate }}
                 </h4>
-              </ngb-alert>           
+              </ngb-alert>
             </div>
             <ng-template #elseBlock>
               <div *ngIf="arena.pause">
@@ -108,125 +108,67 @@
                     <button (click)="arenaPause()" class="ml-50 btn btn-sm btn-relief-success">{{ 'Pause' | translate }}</button>
                   </h4>
                 </ngb-alert>
-              </div>  
+              </div>
             </ng-template>
           </div>
 
-          <div class="card">
-            <div class="table-responsive arena-table">
-              <table class="table-results table table-striped">
-                <thead>
-                  <tr class="bg-arena">
-                    <th class="text-dark">#</th>
-                    <th class="text-dark">{{ 'User' | translate }}</th>
-                    <th class="text-dark text-right">{{ 'Results' | translate }}</th>
-                    <th class="text-dark text-center">{{ 'Points' | translate }}</th>
-                  </tr>
-                </thead>
-
-                <tbody>
-                  <tr style="cursor: pointer;" (click)="loadArenaPlayerStatistics(player.username)"
-                      *ngFor="let player of arenaPlayers; index as i" [ngClass]="{
-                    'bg-light-warning': player.username == currentUser?.username
+          <kep-table [loading]="isLoading" [tableClass]="'arena-table'">
+            <ng-container header>
+              <tr class="bg-arena">
+                <th class="text-dark">#</th>
+                <th class="text-dark">{{ 'User' | translate }}</th>
+                <th class="text-dark text-right">{{ 'Results' | translate }}</th>
+                <th class="text-dark text-center">{{ 'Points' | translate }}</th>
+              </tr>
+            </ng-container>
+            <ng-container body>
+              @for(player of arenaPlayers; track player.username){
+                <tr
+                  class="cursor-pointer"
+                  (click)="loadArenaPlayerStatistics(player.username)"
+                  [ngClass]="{
+                  'bg-light-warning': player.username == currentUser?.username
+                 }">
+                  <td class="text-dark">{{ player.rowIndex }}</td>
+                  <td>
+                    <challenges-user-view [user]="player" [withRating]="true"></challenges-user-view>
+                  </td>
+                  <td class="text-right player-results">
+                  <span *ngFor="let result of player.results" [ngClass]="{
+                    'text-warning': result == 3,
+                    'text-success': result == 2,
+                    'text-secondary': result == 1,
+                    'text-danger': result == 0
                   }">
-                    <td class="text-dark">{{ (pageNumber-1)*10+i+1 }}</td>
-                    <td>
-                      <challenges-user-view [user]="player" [withRating]="true"></challenges-user-view>
-                    </td>
-                    <td class="text-right player-results">
-                      <span *ngFor="let result of player.results" [ngClass]="{
-                        'text-warning': result == 3,
-                        'text-success': result == 2,
-                        'text-secondary': result == 1,
-                        'text-danger': result == 0
-                      }">
-                        {{ result }}
-                      </span>
-                    </td>
-                    <td class="text-center">
-                      <span class="badge-glow badge-warning badge">
-                        <img *ngIf="player.streak && arena.status == 0" src="assets/images/icons/fire_red.png" alt="streak" width="17" height="17">
-                        {{ player.points }}
-                      </span>
-                    </td>
-                  </tr>
-                </tbody>
-
-              </table>
-            </div>
-
-          </div>
-
-          <kep-pagination
-            *ngIf="total > 0"
-            [collectionSize]="total"
-            [(page)]="pageNumber"
-            [pageSize]="10"
-            [maxSize]="5"
-            [rotate]="true"
-            [color]="'warning'"
-            (pageChange)="updateArenaPlayers()">
-          </kep-pagination>
-
-          <div class="col-12">
-            <div class="row">
-              <div class="col-lg-6 col-md-6 col-12" *ngFor="let challenge of arenaChallenges">
-                <div class="table-responsive challenge-results mb-1">
-                  <table class="table">
-                    <tbody>
-                      <tr>
-                        <td>
-                          <challenges-user-view [user]="challenge.playerFirst"></challenges-user-view>
-                        </td>
-                        <td class="text-right">
-                          <span class="badge badge-glow" [ngClass]="{
-                              'badge-success': challenge.playerFirst.result > challenge.playerSecond.result,
-                              'badge-danger': challenge.playerFirst.result < challenge.playerSecond.result,
-                              'badge-secondary': challenge.playerFirst.result == challenge.playerSecond.result
-                            }">
-                            {{ challenge.playerFirst.result }}
-                          </span>
-                        </td>            
-                      </tr>
-                
-                      <tr>
-                        <td>
-                          <challenges-user-view [user]="challenge.playerSecond"></challenges-user-view>
-                        </td>
-                
-                        <td class="text-right">
-                          <span class="badge badge-glow" [ngClass]="{
-                              'badge-danger': challenge.playerFirst.result > challenge.playerSecond.result,
-                              'badge-success': challenge.playerFirst.result < challenge.playerSecond.result,
-                              'badge-secondary': challenge.playerFirst.result == challenge.playerSecond.result
-                            }">
-                            {{ challenge.playerSecond.result }}
-                          </span>
-                        </td>            
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>    
-            </div>
-          </div>
-
-          <div class="mb-2">
-            <kep-pagination
-              *ngIf="total > 0"
-              [collectionSize]="total"
-              [(page)]="pageNumber"
-              [pageSize]="10"
-              [maxSize]="5"
-              [rotate]="true"
-              [color]="'warning'"
-              (pageChange)="updateArenaPlayers()">
-            </kep-pagination>
-          </div>
-
+                    {{ result }}
+                  </span>
+                  </td>
+                  <td class="text-center">
+                  <span class="badge-glow badge-warning badge">
+                    <img *ngIf="player.streak && arena.status == 0" src="assets/images/icons/fire_red.png" alt="streak" width="17" height="17">
+                    {{ player.points }}
+                  </span>
+                  </td>
+                </tr>
+              }
+            </ng-container>
+            <ng-container pagination>
+              <kep-pagination
+                *ngIf="total"
+                [collectionSize]="total"
+                [(page)]="pageNumber"
+                [pageSize]="pageSize"
+                [maxSize]="maxSize"
+                [rotate]="true"
+                [color]="'warning'"
+                (pageChange)="reloadPage()">
+              </kep-pagination>
+            </ng-container>
+          </kep-table>
+          <arena-challenges *ngIf="arena.status != -1"></arena-challenges>
         </div>
 
-        <div class="col-lg-3 col-md-12 col-sm-12 order-lg-3 order-2" [@fadeInRight]="startAnimationState">
+        <div class="col-lg-3 col-md-12 col-sm-12 order-lg-3 order-2" [@fadeInRightOnEnter]>
           <div class="card bg-arena">
             <div class="card-body">
               <div class="text-center" *ngIf="arena.status == 1">
@@ -240,12 +182,12 @@
                     {{ arenaStatistics.averageRating }}
                   </span>
                 </div>
-  
+
                 <div ngbTooltip="{{ 'Challenges' | translate }}">
                   <i data-feather="zap" class="font-medium-3"></i>
                   <span class="font-large-1">
                     {{ arenaStatistics.challenges }}
-                  </span>  
+                  </span>
                 </div>
               </div>
               <ngx-countdown *ngIf="arena.status != 1" [time]="leftTime" [render]="render" format="HH:mm:ss" (finish)="refreshPage()">
