--- a/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.scss
+++ b/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.scss
@@ -1,4 +1,4 @@
-.bg-arena {
+::ng-deep .bg-arena {
   background: linear-gradient(to right, #f8b600e3, #fde29c);
   border-radius: 10px;
   border: none;
@@ -24,10 +24,24 @@
   }
 }
 
-.arena-table {
+::ng-deep .arena-table {
   border-radius: 10px;
   border: none;
   box-shadow: 0 0 10px #BA8B02;
+
+  .table td:nth-child(2) {
+    min-width: 250px;
+  }
+
+  .table th,
+  .table td {
+    border-top: none;
+    border-bottom: none;
+  }
+
+  .table td {
+    height: 60px !important;
+  }
 }
 
 .card-header {
@@ -38,23 +52,9 @@
   font-family: Roboto !important;
 }
 
+
 .card-footer {
   border-top: 1px solid #fde29c;
-}
-
-
-.table-results td:nth-child(2) {
-  min-width: 250px;
-}
-
-.table th,
-.table td {
-  border-top: none;
-  border-bottom: none;
-}
-
-.table-results td {
-  height: 60px !important;
 }
 
 .clock-val {
@@ -65,14 +65,6 @@
 .clock-text {
   color: #000;
 }
-
-.challenge-results {
-  box-shadow: 0 0 5px #BA8B02 !important;
-  border-radius: 10px;
-  border: none;
-}
-
-.challenge-results {}
 
 .animate {
   box-sizing: border-box;
