--- a/src/app/modules/arena/pages/arena/arena.component.html
+++ b/src/app/modules/arena/pages/arena/arena.component.html
@@ -1,17 +1,17 @@
 <section class="arena">
-  <div class="row">
-    <div class="col-12 mb-4 mt-2 arena-page-top">
+  <div class="arena-page-top">
+    <div class="col-12">
       <div class="text-center">
-        <div [@fadeInUpOnEnter] class="avatar avatar-lg p-50 m-0 mt-1 mb-1 bg-warning badge-glow">
+        <div [@fadeInUpOnEnter] class="avatar avatar-lg p-50 m-0 mt-1 mb-1 arena-avatar">
           <div class="avatar-content">
             <i class="font-large-1" data-feather="shield"></i>
           </div>
         </div>
-  
+
         <h2 [@fadeInUpOnEnter] class="mt-2">
           <span class="text-white">{{ 'Arena' | translate }}</span>
         </h2>
-  
+
         <div class="mt-3 col-lg-8 col-12 offset-lg-2 offset-0">
           <div class="row">
             <div class="col-12 col-md-6">
@@ -26,7 +26,7 @@
                 </div>
               </a>
             </div>
-  
+
             <div class="col-12 col-md-6">
               <a [@fadeInRightOnEnter] class="card card-info" routerLink="/learn/blog/post/69">
                 <div class="card-header">
@@ -41,10 +41,8 @@
             </div>
           </div>
         </div>
-    
       </div>
     </div>
-  
     <div class="col-lg-8 col-12 offset-lg-2">
       <div class="row">
         <div class="col-12 bg-arena-list" *ngFor="let arena of arenaList">
@@ -52,5 +50,5 @@
         </div>
       </div>
     </div>
-  </div>  
+  </div>
 </section>
