[REFACTORING] test-pass page

--- a/src/app/modules/arena/pages/arena/arena.component.html
+++ b/src/app/modules/arena/pages/arena/arena.component.html
@@ -1,5 +1,5 @@
 <section class="arena">
-  <div class="arena-page-top">
+  <div class="arena-page-top mb-2">
     <div class="col-12">
       <div class="text-center">
         <div [@fadeInUpOnEnter] class="avatar avatar-lg p-50 m-0 mt-1 mb-1 arena-avatar">
