--- a/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.html
+++ b/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.html
@@ -112,7 +112,7 @@
             </ng-template>
           </div>
 
-          <kep-table [loading]="isLoading" [tableClass]="'arena-table'">
+          <kep-table [tableClass]="'arena-table'">
             <ng-container header>
               <tr class="bg-arena">
                 <th class="text-dark">#</th>
