[REFACTORING] arena-tournament result-table

--- a/src/app/modules/arena/pages/arena-tournament/arena-challenges/arena-challenges.component.scss
+++ b/src/app/modules/arena/pages/arena-tournament/arena-challenges/arena-challenges.component.scss
@@ -2,5 +2,8 @@
   box-shadow: 0 0 5px #BA8B02 !important;
   border-radius: 10px;
   border: none;
-  margin-bottom: 0;
+
+  .table {
+    margin-bottom: 0;
+  }
 }
