--- a/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.html
+++ b/src/app/modules/arena/pages/arena-tournament/arena-tournament.component.html
@@ -67,15 +67,15 @@
             <div class="card-body">
               <div class="row text-center">
                 <div class="col-4 mt-2" [@bounce2]>
-                  <img width="90" height="90" class="mb-2" src="../../../../../assets/images/icons/arena-second-place.png" alt="first-place">
+                  <img width="90" height="90" class="mb-2" src="assets/images/icons/arena-second-place.png" alt="second-place">
                   <arena-player-statistics [statistics]="top3[1]" [withOpponents]="false"></arena-player-statistics>
                 </div>
                 <div class="col-4" [@bounce1]>
-                  <img width="90" height="90" class="mb-2" src="../../../../../assets/images/icons/arena-first-place.png" alt="first-place">
+                  <img width="90" height="90" class="mb-2" src="assets/images/icons/arena-first-place.png" alt="first-place">
                   <arena-player-statistics [statistics]="top3[0]" [withOpponents]="false"></arena-player-statistics>
                 </div>
                 <div class="col-4 mt-4" [@bounce3]>
-                  <img width="90" height="90" class="mb-2" src="../../../../../assets/images/icons/arena-third-place.png" alt="first-place">
+                  <img width="90" height="90" class="mb-2" src="assets/images/icons/arena-third-place.png" alt="third-place">
                   <arena-player-statistics [statistics]="top3[2]" [withOpponents]="false"></arena-player-statistics>
                 </div>
               </div>
@@ -113,7 +113,7 @@
             </ng-template>
           </div>
 
-          <kep-table [tableClass]="'arena-table'">
+          <kep-table [loading]="isLoading && arena.status == 1" [tableClass]="'arena-table'">
             <ng-container header>
               <tr class="bg-arena">
                 <th class="text-dark">#</th>
@@ -162,11 +162,16 @@
                 [maxSize]="maxSize"
                 [rotate]="true"
                 [color]="'warning'"
-                (pageChange)="reloadPage()">
+                [pageOptions]="pageOptions"
+                (pageSizeChange)="pageSizeChange($event)"
+                (pageChange)="pageChange($event)">
               </kep-pagination>
             </ng-container>
           </kep-table>
-          <arena-challenges *ngIf="arena.status != -1"></arena-challenges>
+
+          <div class="mt-2">
+            <arena-challenges *ngIf="arena.status != -1"></arena-challenges>
+          </div>
         </div>
 
         <div class="col-lg-3 col-md-12 col-sm-12 order-lg-3 order-2" [@fadeInRightOnEnter]>
